--- a/cv.html
+++ b/cv.html
@@ -81,6 +81,6 @@
     </div>
 
     <h2 class="cv-title">EDUCATION</h2>
-
+    <h3 class="major">Master's Degree in Major&nbsp;|&nbsp;</h3><span> Name of College or Institution - Location | <i>yyyy</i></span>
   </div>
 </html>
