--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./cv.html" target="_blank" rel="noopener noreferrer">CV</a></li>
         <li><a href="./menu.html" target="_blank" rel="noopener noreferrer">Menu</a></li>
+        <li><a href="./form.html" target="_blank" rel="noopener noreferrer">Form</a></li>
     </ul>
 </body>
 </html>
