--- a/index.html
+++ b/index.html
@@ -4,13 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My page</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h1>Welcome to my page</h1>
-    <ul>
-        <li><a href="./cv.html" target="_blank" rel="noopener noreferrer">CV</a></li>
-        <li><a href="./menu.html" target="_blank" rel="noopener noreferrer">Menu</a></li>
-        <li><a href="./form.html" target="_blank" rel="noopener noreferrer">Form</a></li>
-    </ul>
+    <div class="index-container">
+        <h1>Welcome to my page</h1>
+        <ul>
+            <li>
+                <a href="./cv.html" target="_blank" rel="noopener noreferrer">
+                    CV
+                    <button class="btn-go" role="button">
+                        Go
+                    </button>
+                </a>
+            </li>
+            <li>
+                <a href="./menu.html" target="_blank" rel="noopener noreferrer">
+                    Menu
+                    <button class="btn-go" role="button">
+                        Go
+                    </button>
+                </a>
+            </li>
+            <li>
+                <a href="./form.html" target="_blank" rel="noopener noreferrer">
+                    Form
+                    <button class="btn-go" role="button">
+                        Go
+                    </button>
+                </a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
